k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-eval
  labels:
    app: my-api-eval
spec:
  type: ClusterIP
  ports:
  - port: 8002
    protocol: TCP
    targetPort: 8000
  selector:
    app: my-api-eval
